[gd_scene load_steps=11 format=3 uid="uid://2rmdcylvk1ui"]

[ext_resource type="Script" path="res://card3d.gd" id="1_gqbhw"]
[ext_resource type="PackedScene" uid="uid://88s2fwk2lrtx" path="res://card_front.tscn" id="1_ircpo"]

[sub_resource type="ViewportTexture" id="ViewportTexture_63w52"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bg7e8"]
resource_local_to_scene = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_63w52")

[sub_resource type="QuadMesh" id="QuadMesh_62pkv"]
size = Vector2(1, 1.5)

[sub_resource type="Gradient" id="Gradient_ao2hn"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qs7jf"]
gradient = SubResource("Gradient_ao2hn")
fill_to = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r4skx"]
shading_mode = 0
albedo_texture = SubResource("GradientTexture2D_qs7jf")

[sub_resource type="QuadMesh" id="QuadMesh_kqme7"]
flip_faces = true
size = Vector2(1, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_sqqtk"]
size = Vector3(1, 1.5, 0.01)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_gqbhw")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(340, 510)
render_target_update_mode = 1

[node name="CardFront" parent="SubViewport" instance=ExtResource("1_ircpo")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_bg7e8")
mesh = SubResource("QuadMesh_62pkv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_r4skx")
mesh = SubResource("QuadMesh_kqme7")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_sqqtk")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
